--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>Manejo</servlet-name>
-        <servlet-class>Controlaodres.Manejo</servlet-class>
+        <servlet-name>ControlinserLibro</servlet-name>
+        <servlet-class>Controladores.ControlinserLibro</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListarLibros</servlet-name>
+        <servlet-class>Controladores.ListarLibros</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CrearFactura</servlet-name>
+        <servlet-class>Controladores.CrearFactura</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>VerVentas</servlet-name>
+        <servlet-class>Controladores.VerVentas</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>Controladores.Login</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ControlEmpleado</servlet-name>
+        <servlet-class>Controladores.ControlEmpleado</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListarEmpleados</servlet-name>
+        <servlet-class>Controladores.ListarEmpleados</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LibrosUsados</servlet-name>
+        <servlet-class>Controladores.LibrosUsados</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LibrosNuevos</servlet-name>
+        <servlet-class>Controladores.LibrosNuevos</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrdenarAutor</servlet-name>
+        <servlet-class>Controladores.OrdenarAutor</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Manejo</servlet-name>
-        <url-pattern>/Manejo</url-pattern>
+        <servlet-name>ControlinserLibro</servlet-name>
+        <url-pattern>/ControlinserLibro</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListarLibros</servlet-name>
+        <url-pattern>/ListarLibros</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CrearFactura</servlet-name>
+        <url-pattern>/CrearFactura</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>VerVentas</servlet-name>
+        <url-pattern>/VerVentas</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControlEmpleado</servlet-name>
+        <url-pattern>/ControlEmpleado</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListarEmpleados</servlet-name>
+        <url-pattern>/ListarEmpleados</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LibrosUsados</servlet-name>
+        <url-pattern>/LibrosUsados</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LibrosNuevos</servlet-name>
+        <url-pattern>/LibrosNuevos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrdenarAutor</servlet-name>
+        <url-pattern>/OrdenarAutor</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>Sindex.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
