--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,8 @@
         <servlet-class>Controladores.ControlEmpleado</servlet-class>
     </servlet>
        <servlet>
-        <servlet-name>ListaDeseos</servlet-name>
-        <servlet-class>control.ListaDeseos</servlet-class>
+        <servlet-name>ComprasInternet</servlet-name>
+        <servlet-class>control.ComprasInternet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ListarEmpleados</servlet-name>
@@ -85,8 +85,8 @@
         <url-pattern>/OrdenarAutor</url-pattern>
     </servlet-mapping>
      <servlet-mapping>
-        <servlet-name>ListaDeseos</servlet-name>
-        <url-pattern>/ListaDeseos</url-pattern>
+        <servlet-name>ComprasInternet</servlet-name>
+        <url-pattern>/ComprasInternet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
